--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>EAF</title>
+<title>EAF-Entities</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 <link rel="stylesheet"https://www.w3schools.com/html/tryit.asp?filename=tryhtml_editors
   https://beautifier.io/
